Fix issues with charts overlapping

--- a/client/src/app/assessments/assessments.scss
+++ b/client/src/app/assessments/assessments.scss
@@ -800,7 +800,7 @@
     }
 
     .bar-graph {
-      height: 256px;
+      min-height: 256px;
     }
 
     h3 {
